# 2022_2_24-7

./: .clang-format  .clang-format1  .gitignore  CMakeLists.txt  CMakeLists.txt.user.2fdf32b  CMakeLists.txt.user.78bc59c  CPPLINT.cfg  Client.cpp  Client.hpp  Dockerfile  IMainWindow.h  README.md  cppLintCheck.py  format_check.sh  main.cpp  mainwindow.cpp  mainwindow.h  mythread.cpp  mythread.h  tidy_check.sh
.github/workdlows/: cmake.yml
.github/workflows/: CI.yml  cmake.yml
Chat/: CMakeLists.txt
Chat/src/: chat.cpp
client_side/: CMakeLists.txt  main.cpp
client_side/include/: Client.hpp  Dto.hpp  client.hpp  mainwindow.h  mainwindow.ui
client_side/src/: Client.cpp  client.cpp  mainwindow.cpp
client_side/tests_client/: CMakeLists.txt  tests.cpp
client_side/tests_client_side/: CMakeLists.txt  tests.cpp
client_side/text_editor/: CMakeLists.txt
client_side/text_editor/interfaces/: IWorkWithData.hpp
client_side/text_editor/src/: TranslatorFromList.cpp  WorkWithData.cpp
client_side/text_editor/tests_text_editor/: CMakeLists.txt
project/: CMakeLists.txt
project/tests/: CMakeLists.txt  tests.cpp
scripts/: coverage_check.sh  cppCheck_check.sh  cpplint_check.sh  format_check.sh  tidy_check.sh  vallgrind_check.sh
server/: CMakeLists.txt
server_side/: CMakeLists.txt  main.cpp
server_side/DB/: CMakeLists.txt
server_side/DB/include/: Connection.hpp  DB.hpp  Handlers.hpp  IConnection.hpp  IParser.hpp  IProject.hpp  IResponse.hpp  IRouter.hpp  IWorkWithData.hpp  MyIConnection.hpp  Parser.hpp  Project.hpp  Reply.hpp  Request.hpp  Router.hpp  User.hpp  includes.hpp
server_side/DB/src/: DB.cpp  Handlers.cpp  Parser.cpp  Project.cpp  Router.cpp  chat.cpp
server_side/DB/tests_DB/: CMakeLists.txt  tests.cpp
server_side/chat/: CMakeLists.txt
server_side/chat/include/: chat.hpp
server_side/chat/src/: chat.cpp
server_side/chat/tests_chat/: CMakeLists.txt  tests.cpp
server_side/server/: CMakeLists.txt
server_side/server/include/: Connection.hpp  Handler.hpp  IConnection.hpp  IHandler.hpp  IReply.hpp  IRequest.hpp  IRouter.hpp  ISerializer.hpp  IServer.hpp  MyRouter.hpp  Reply.hpp  Request.hpp  Router.hpp  Serializer.hpp  Server.hpp  ServerConfig.hpp  server.hpp
server_side/server/src/: Connection.cpp  Handler.cpp  Serializer.cpp  Server.cpp  server.cpp
server_side/server/tests_server/: CMakeLists.txt  ConnectionTests.cpp  HandlerTests.cpp  SerializerTests.cpp  ServerTests.cpp  tests.cpp
server_side/sync system/command analyzer/: analyzer.hpp
server_side/text_editor/: CMakeLists.txt  D:\hello.txt  DEELETETEST.cpp  test.cpp
server_side/text_editor/DB/tests_DB/: testsForDB[1]_include.cmake
server_side/text_editor/include/: Command.hpp  Functors.hpp  ISearchForPlace.hpp  ITextEditor.hpp  ITranslator.hpp  IWorkWithData.hpp  IWorkWithFile.hpp  SearcherForPlace.hpp  TextEditor.hpp  TranslatorFromList.hpp  WorkWithData.hpp  WorkWithFile.hpp  WorkWithLogFile.hpp  line.hpp
server_side/text_editor/interfaces/: Answer.hpp  Command.hpp  ISearchForPlace.hpp  ITextEditor.hpp  ITranslator.hpp  IWorkWithData.hpp  IWorkWithFile.hpp  StartOfLine.hpp  element.hpp
server_side/text_editor/server/tests_server/: testsForServer[1]_include.cmake
server_side/text_editor/src/: Command.cpp  Functors.cpp  SearcherForPlace.cpp  TextEditor.cpp  TranslatorFromList.cpp  WorkWithCppFile.cpp  WorkWithData.cpp  WorkWithLogFile.cpp  line.cpp
server_side/text_editor/tests_text_editor/: CMakeLists.txt  Interface.cpp  TE_NotCommand.cpp  tests.cpp
server_side/text_editor/text_editor/tests_text_editor/: testsForTextEditor[1]_include.cmake
test/: test.cpp
tests/: CMakeLists.txt
tests/editorTests/: lineElement.cpp  lineElement1.cpp  lineOfText.cpp  lineOfText1.cpp  textEditor.cpp  textEditor1.cpp
tests/testExampleLib/: tests.cpp
textLib/: CMakeLists.txt  lineElement.cpp  lineOfText.cpp  textEditor.cpp
textLib/include/: lineElement.hpp  lineOfText.hpp  textEditor.hpp
text_editor/: CMakeLists.txt
text_editor/interfaces/: ISearchForPlace.hpp  ITextEditor.hpp
text_editor/src/: Command.cpp  Functors.cpp  TextEditor.cpp  WorkWithData.cpp  WorkWithLogFile.cpp
zBackendTesting/: mymain.cpp
zBackendTesting/include/: DB.hpp  IRouter.hpp  IWorkWithData.hpp  Parser.hpp  Router.hpp  includes.hpp
zBackendTesting/src/: Router.cpp
