cmake_minimum_required(VERSION 3.14)

project(server_side)

set(LIB_NAME ${PROJECT_NAME}_lib)

set(CMAXE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(server)
add_subdirectory(text_editor)
add_subdirectory(DB)

add_library(${LIB_NAME} STATIC ${SERVER_SOURCES_HEADERS_LIB} ${TEXT_EDITOR_SOURCES_HEADERS_LIB} ${DB_SOURCES_HEADERS_LIB}) 

set(CONNECTED_LIBS ${SERVER_LIB} ${TEXT_EDITOR_LIB} ${DB_LIB})
set(SERVER_SIDE_INCLUDE_DIRECTORIES ${SERVER_INCLUDE_DIRS} ${TEXT_EDITOR_INCLUDE_DIRS} ${DB_INCLUDE_DIRS})

target_link_libraries(${LIB_NAME} ${CONNECTED_LIBS}) 
target_include_directories(${LIB_NAME} PUBLIC ${SERVER_SIDE_INCLUDE_DIRECTORIES})

message("server_side_lib " ${CONNECTED_LIBS})
message("server_side_include_directories " ${SERVER_SIDE_INCLUDE_DIRECTORIES})

set(SERVER_SIDE_LIB ${CONNECTED_LIBS} PARENT_SCOPE)
set(SERVER_SIDE_INCLUDE_DIRECTORIES ${SERVER_SIDE_INCLUDE_DIRECTORIES} PARENT_SCOPE)
